# coup_ppe

./: .gitignore  README.md  config_TEMPLATE.yml  environment.yml  pyproject.toml
crosswalk/: pisom_crosswalk.csv
data/catalogs/: pisom_history_catalog_glade.json  pisom_timeseries_catalog_glade.json
data/crosswalk/: README.txt
data/crosswalks/: README.md  fhist_crosswalk.csv  hadcm3_crosswalk.csv
dev/: a1b_hadcm3_timeseries_catalog.json  coup_ppe_catalog.csv  coup_ppe_catalog.json  create_intake_catalog.ipynb  create_intake_catalog.py  history_catalog.json  pisom_history_catalog_mem.csv  pisom_history_catalog_mem.json  pisom_timeseries_catalog_atm.csv  pisom_timeseries_catalog_atm.json  pisom_timeseries_catalog_mem.csv  pisom_timeseries_catalog_mem.json  test.ipynb
notebooks/: check-case.ipynb  check-postprocess.ipynb
scripts/: README.md  batch_qdel_dask.sh  build_catalog.py  build_fhist_catalog.py  build_member_id_map.py  build_pisom_catalog.py  checkIHIST.py  create_member_id_map.py  production.sh  runFHIST.job  runFHIST.sh
scripts/namelists/: format_user_nl_cam.ipynb
scripts/postprocess/: env_timeseries_FHIST_BGC.xml  globus_transfer_to_campaign.sh  postprocess.sh  rsync_transfer_to_campaign.sh
sims/coupPPE.028/: case.txt  segment011.o3930829  segment012.job  segment012.o3937491  segment013.job  segment013.o3939500  segment014.job  segment014.o3941128  segment015.job  segment015.o3941473  segment016.job  segment016.o3941953  segment017.job  segment017.o3943197  segment018.job  segment018.o3943943  segment019.job  segment019.o3944541  segment020.job  (+4 more)
(+37 files in other folders)
